--- a/contact me.html
+++ b/contact me.html
@@ -14,7 +14,7 @@
       <input type="text" name="My name" value=""><br>
       <label>Enter contact Number:</label>
       <input type="number" name="My Number" value=""><br>
-      <label>Your email address:</label><
+      <label>Your email address:</label>
       <input type="email" name="My Message" value=""><br>
       <label>Type Your Message:</label><br>
       <textarea name="name" rows="4" cols="30"></textarea><br>
